--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-<script>mermaid.initialize({ startOnLoad: true, securityLevel: 'loose'}});</script>
+<script>mermaid.initialize({ startOnLoad: true, securityLevel: 'loose'})</script>
 
 <section class="section container-fluid mt-n3 pb-3">
   <div class="row justify-content-center">
