--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,9 @@
   </div>
 </section>
 {{ end }}
+<meta http-equiv="Content-Security-Policy" content=" default-src 'self'; script-src-elem 'self' https://cdn.jsdelivr.net/npm;">
+
+
 
 {{ define "sidebar-prefooter" }}
 <section class="section section-sm">
